corrigiendo errores del ruteo y del include

--- a/src/views/main/index.ejs
+++ b/src/views/main/index.ejs
@@ -1,10 +1,10 @@
 <!-- Paritials head -->
  
-<%- include('./partials/head.ejs', { extraFont: false, stylesheetPath: '/css/styles-index.css' }) %>
+<%- include('../partials/head.ejs', { extraFont: false, stylesheetPath: '/css/styles-index.css' }) %>
 
 <body>
     <!--Partials header -->
-    <%- include('./partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
     <main>
         <!----------------- BANNER DE IMAGENES PARA LA VERSION MOVIL ------------------------>
@@ -161,7 +161,7 @@
     </main>
     
     <!--Partials footer  -->
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
 </body>
 </html>
