--- a/src/views/products/productsList.ejs
+++ b/src/views/products/productsList.ejs
@@ -1,10 +1,10 @@
 <!-- Paritials head -->
  
-<%- include('./partials/head.ejs', { extraFont: false, stylesheetPath: '/css/styles-listProducts.css' }) %>
+<%- include('../partials/head.ejs', { extraFont: false, stylesheetPath: '/css/styles-listProducts.css' }) %>
 
 <body>
     <!--Partials header -->
-    <%- include('./partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
     <main>
         <!----------------- AQUI ESTAN LOS PRODUCTOS DESTACADOS DEL USUARIO ------------------------>
@@ -56,6 +56,6 @@
     </main>
 
     <!--Partials footer  -->
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 </html>
