--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -1,10 +1,10 @@
 <!-- Paritials head -->
 
-<%- include('./partials/head.ejs', { extraFont: "https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap", stylesheetPath: "/css/styles-productCart.css" }) %>
+<%- include('../partials/head.ejs', { extraFont: "https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap", stylesheetPath: "/css/styles-productCart.css" }) %>
 
 <body>
     <!--Partials header  -->
-    <%- include('./partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
     
     <main>
         <!----------------- TITULO ------------------------>
@@ -75,6 +75,6 @@
     </main>
 
     <!--Partials footer  -->
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 </html>
