--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,10 +1,10 @@
 <!-- Paritials head -->
  
-<%- include('./partials/head.ejs', { extraFont: false, stylesheetPath: '/css/styles-productDetail.css' }) %>
+<%- include('../partials/head.ejs', { extraFont: false, stylesheetPath: '/css/styles-productDetail.css' }) %>
 
 <body>
     <!--Partials header-->
-    <%- include('./partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
     <main>
 
@@ -60,6 +60,6 @@
     </main>
 
     <!--Partials footer-->
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 </html>
