--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -1,10 +1,10 @@
 <!-- Paritials head -->
  
-<%- include('./partials/head.ejs', { extraFont: "https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap", stylesheetPath: "/css/styles-register.css" }) %>
+<%- include('../partials/head.ejs', { extraFont: "https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap", stylesheetPath: "/css/styles-register.css" }) %>
 
 <body>
     <!--Partials header -->
-    <%- include('./partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
     <main>
         
@@ -45,6 +45,6 @@
     </main>
 
     <!--Partials footer  -->
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 </body>
 </html>
