--- a/src/views/products/editProduct.ejs
+++ b/src/views/products/editProduct.ejs
@@ -1,57 +1,99 @@
-<!DOCTYPE html>
-<html lang="es">
-    <!-- Paritials head -->
+<!-- Paritials head -->
 
-<%- include('../partials/head.ejs', { extraFont: "https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap", stylesheetPath: "/css/styles-productCart.css" }) %>
+<%- include('../partials/head.ejs', { extraFont: "https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap", stylesheetPath: "/css/styles-editProduct.css" }) %>
 
 <body>
     <!--Partials header  -->
     <%- include('../partials/header.ejs') %>
     
     <main>
-        <div class="container products-wrapper">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="products-title">Estás editando: <i></i></h2>
-                </div>
+        <div class="contenedor-principal">
+
+            <!--------- TITULO DEL FORMULARIO ----------->
+            <div class="contenedor-titulo">
+                <h2>Edición de producto</h2>
             </div>
-            <div class="col-12">
-                <form action="/products/editProduct" method="POST">
-                    <div class="row product-detail">
-                        <div class="col-12 col-md-6">
-                            <label for="name" class="form-label">Nombre del producto:</label>
-                            <input type="text" id="name" name="name" placeholder="Ej:" class="form-input" value="">
+
+
+            <!-------------- FORMULARIO --------------------->
+            <div class="contenedor-formulario">
+                <form action="/product/editProduct/<%= productToEdit.id %>" method="POST">
+                    <div class="contenedor-inputs">
+                        <div>
+                            <label for="name">Nombre del producto:</label>
+                            <input type="text" id="name" name="name" placeholder="Ej: Smartwatch Amazfit Bip 3 Pink" value="<%= productToEdit.name %>">
                         </div>
-                        <div class="col-12 col-md-6">
-                            <label for="price" class="form-label">Precio del producto:</label>
-                            <input type="text" id="price" name="price" placeholder="Ej: 5678" class="form-input" value="">
+                            
+                        <div>
+                            <label for="price">Precio del producto:</label>
+                            <input type="text" id="price" name="price" placeholder="Ej: 5678" value="<%= productToEdit.price %>">
                         </div>
-                        <div class="col-12 col-md-6">
-                            <label for="discount" class="form-label">Descuento:</label>
-                            <input type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input" value="">
+
+                        <div>
+                            <label for="discount">Descuento:</label>
+                            <input type="text" id="discount" name="discount" placeholder="Ej: 15" value="<%= productToEdit.discount %>"> 
                         </div>
-                        <div class="col-12 col-md-6">
-                            <label for="category" class="form-label">Categoría:</label>
-                            <select name="category" id="category" class="form-input">
-                                <option value="">Elegí</option>
-                                <option value="in-sale">En oferta</option>
-                                <option value="visited" >Últimos agregados</option>
+
+                        <div>
+                            <label for="brand">Marca:</label>
+                            <input type="text" id="brand" name="brand" placeholder="Ej: Lenovo" value="<%= productToEdit.brand %>">
+                        </div>
+
+                        <!------------ CHECKBOX DE LAS CATEGORIAS ---------------->
+                        <div class="contenedor-categorias">
+                            <label for="category">Categorias:</label>
+                            <div>
+                                <input type="checkbox" id="laptops" name="category" value="laptops" <% if (productToEdit.categories.includes('laptops')) { %>checked<% } %>>
+                                <label for="laptops">Laptops</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="oficina" name="category" value="oficina" <% if (productToEdit.categories.includes('oficina')) { %>checked<% } %>>
+                                <label for="oficina">Oficina</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="estudiantes" name="category" value="estudiantes" <% if (productToEdit.categories.includes('estudiantes')) { %>checked<% } %>>
+                                <label for="estudiantes">Estudiantes</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="accesorios" name="category" value="accesorios" <% if (productToEdit.categories.includes('accesorios')) { %>checked<% } %>>
+                                <label for="accesorios">Accesorios</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" id="gamer" name="category" value="gamer" <% if (productToEdit.categories.includes('gamer')) { %>checked<% } %>>
+                                <label for="gamer">Gamer</label>
+                            </div>
+                        </div>
+
+                        <div class="contenedor-imagen">
+                            <label for="image">Imagen:</label>
+                            <input type="file" id="image" name="image">
+                        </div>
+
+                        <div>
+                            <label for="status">Estado:</label>
+                            <select name="status" id="status">
+                                <option value="" <% if (productToEdit.status === "") { %>selected<% } %>>Ninguno</option>
+                                <option value="featured" <% if (productToEdit.status === 'featured') { %>selected<% } %>>Producto destacado</option>
+                                <option value="in-sale" <% if (productToEdit.status === 'in-sale') { %>selected<% } %>>Producto en oferta</option>
                             </select>
                         </div>
-                        <div class="col-12">
-                            <label for="description" class="form-label">Descipción:</label>
-                            <textarea name="description" id="description" class="form-input"></textarea>
+
+                        <div>
+                            <label for="description">Descripción:</label>
+                            <textarea name="description" id="description"><%= productToEdit.description %></textarea>
                         </div>
-                        <div class="col-12">
-                            <button type="submit" class="buy-now-button">Guardar producto</button>
+
+                        <div class="boton-guardar">
+                            <button type="submit">Guardar producto</button>
                         </div>
                     </div>
                 </form>
             </div>
-    
         </div>
     </main>
+
     <!--Partials footer  -->
-<%- include('../partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
+
 </body>
 </html>
