--- a/src/views/products/newProduct.ejs
+++ b/src/views/products/newProduct.ejs
@@ -17,7 +17,7 @@
 
             <!-------------- FORMULARIO --------------------->
             <div class="contenedor-formulario">
-                <form action="/product/newProduct" method="POST">
+                <form action="/product/allProducts/newProduct" method="POST">
                     <div class="contenedor-inputs">
                         <div>
                             <label for="name">Nombre del producto:</label>
