--- a/public/css/styles-productDetail.css
+++ b/public/css/styles-productDetail.css
@@ -122,6 +122,42 @@
     font-size: 1rem;
 }
 
+/* BOTONES EDITAR Y ELIMINAR */
+.botones-admin {
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.botones-admin button {
+    width: 100%;
+    margin: 1rem 0;
+    border: none;
+    height: 3rem;
+    padding: 0.5rem;
+    background-color: #52DEE5;
+    border-radius: 0.5rem;
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.botones-admin a {
+    text-decoration: none;
+    color: white;
+    display: block;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.boton-eliminar {
+    background-color: #E74C3C !important;
+}
+
 /* ANIMACIONES */
 @keyframes splash {
     0% {
@@ -198,6 +234,23 @@
 
     .botones-comprar-carrito button:hover {
         animation: splash 0.8s;
+    }
+
+    /* BOTONES EDITAR Y ELIMINAR */
+    .botones-admin {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .botones-admin button {
+        transition: all 0.3s ease-in-out;
+    }
+
+    .botones-admin button:hover {
+        scale: 1.03;
     }
 
     /* BOTON CANTIDAD */
