--- a/src/views/main/index.ejs
+++ b/src/views/main/index.ejs
@@ -143,21 +143,7 @@
         </section>
 
         <!----------------- AQUI ESTAN LAS MARCAS DE LOS PRODUCTOS; SOLO SE MUEVE EN VERSION MOVIL ------------------------>
-        <section class="banner-marcas">
-            <article class="slider-box-marcas">
-                <ul>
-                    <li><img src="/img/marcas/marca-1.svg"></li>
-                    <li><img src="/img/marcas/marca-2.svg"></li>
-                    <li><img src="/img/marcas/marca-3.svg"></li>
-                    <li><img src="/img/marcas/marca-4.svg"></li>
-                    <li><img src="/img/marcas/marca-5.svg"></li>
-                    <li><img src="/img/marcas/marca-6.svg"></li>
-                    <li><img src="/img/marcas/marca-7.svg"></li>
-                    <li><img src="/img/marcas/marca-8.svg"></li>
-                    <li><img src="/img/marcas/marca-2.svg"></li>
-                </ul>
-            </article>
-        </section>
+        <%- include('../partials/banner-marcas.ejs') %>
     </main>
     
     <!--Partials footer  -->
