--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -37,25 +37,36 @@
                 <p><%= singleProduct.description %></p>
             </article>
             
-            <!----------------- AQUI ESTAN LOS BOTONES DE CANTIDAD Y FAVORITOS ------------------------>
-            <article class="contenedor-cantidad-favoritos">
-
-                <!----------------- BOTONES PARA AÑADIR LA CANTIDAD DESEADA ------------------------>
-                <article class="boton-cantidad">
-                    <p>Cantidad:</p> <button>-</button><input type="text" value="1"><button>+</button> 
+            <!----------------- CONDICIONAL PARA MOSTRAR LOS BOTONES DE ADMIN ------------------------>
+            <% if (admin && req.originalUrl === '/product/allProducts/productDetail/' + singleProduct.id) { %>
+                <article class="botones-admin">
+                    <button><a href="/product/editProduct/<%= singleProduct.id %>">Editar</a></button>
+                    <button class="boton-eliminar"><a href="/products/delete/<%= singleProduct.id %>">Eliminar</a></button>
                 </article>
+            <% } else { %>
 
-                <!----------------- BOTON PARA AGREGAR A FAVORITOS; FALTA AÑADIR ESA SECCION ------------------------>
-                <article class="boton-favoritos">
-                    <button><i class="fa-regular fa-heart"></i></button><p>Favoritos</p>
+                <!----------------- AQUI ESTAN LOS BOTONES DE CANTIDAD Y FAVORITOS ------------------------>
+                <article class="contenedor-cantidad-favoritos">
+    
+                    <!----------------- BOTONES PARA AÑADIR LA CANTIDAD DESEADA ------------------------>
+                    <article class="boton-cantidad">
+                        <p>Cantidad:</p> <button>-</button><input type="text" value="1"><button>+</button> 
+                    </article>
+    
+                    <!----------------- BOTON PARA AGREGAR A FAVORITOS; FALTA AÑADIR ESA SECCION ------------------------>
+                    <article class="boton-favoritos">
+                        <button><i class="fa-regular fa-heart"></i></button><p>Favoritos</p>
+                    </article>
                 </article>
-            </article>
-
-            <!----------------- BOTONES PARA AGREGAR AL CARRITO Y COMPRAR ------------------------>
-            <article class="botones-comprar-carrito">
-                <button>Agregar al carrito</button>
-                <button>Comprar ahora</button>
-            </article>
+    
+                <!----------------- BOTONES PARA AGREGAR AL CARRITO Y COMPRAR ------------------------>
+                <article class="botones-comprar-carrito">
+                    <button>Agregar al carrito</button>
+                    <button>Comprar ahora</button>
+                </article>
+             
+            <% } %>
+             
         </section>
     </main>
 
