--- a/src/views/products/productsCategories.ejs
+++ b/src/views/products/productsCategories.ejs
@@ -1,6 +1,6 @@
 <!-- Paritials head -->
  
-<%- include('../partials/head.ejs', { extraFont: false, stylesheetPath: '/css/styles-listProducts.css' }) %>
+<%- include('../partials/head.ejs', { extraFont: false, stylesheetPath: '/css/styles-productsList.css' }) %>
 
 <body>
     <!--Partials header-->
@@ -38,21 +38,7 @@
 
 
         <!----------------- AQUI ESTAN LAS MARCAS DE LOS PRODUCTOS; SOLO SE MUEVE EN VERSION MOVIL ------------------------>
-        <section class="banner-marcas">
-            <article class="slider-box-marcas">
-                <ul>
-                    <li><img src="/img/marcas/marca-1.svg"></li>
-                    <li><img src="/img/marcas/marca-2.svg"></li>
-                    <li><img src="/img/marcas/marca-3.svg"></li>
-                    <li><img src="/img/marcas/marca-4.svg"></li>
-                    <li><img src="/img/marcas/marca-5.svg"></li>
-                    <li><img src="/img/marcas/marca-6.svg"></li>
-                    <li><img src="/img/marcas/marca-7.svg"></li>
-                    <li><img src="/img/marcas/marca-8.svg"></li>
-                    <li><img src="/img/marcas/marca-2.svg"></li>
-                </ul>
-            </article>
-        </section>
+        <%- include('../partials/banner-marcas.ejs') %>
     </main>
 
     <!--Partials footer -->
