añadiendo copia de los productos

--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -40,9 +40,12 @@
             <!----------------- CONDICIONAL PARA MOSTRAR LOS BOTONES DE ADMIN ------------------------>
             <% if (admin && req.originalUrl === '/product/allProducts/productDetail/' + singleProduct.id) { %>
                 <article class="botones-admin">
+
                     <button><a href="/product/editProduct/<%= singleProduct.id %>">Editar</a></button>
+
                     <form action="/product/delete/<%= singleProduct.id %>?_method=DELETE" method="POST">
-                        <button type="submit" class="boton-eliminar">ELIMINAR</button>
+                        <button type="submit" class="boton-eliminar">Eliminar</button>
+                    </form>
                 </article>
             <% } else { %>
 
