--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -10,17 +10,23 @@
         <!----------------- FORMULARIO DE LOGIN ------------------------>
         <section class="fondo-login">
             <article class="contenedor-login">
-                <form action="" method="post">
+                <form action="/user/login" method="post">
 
                     <!----------------- TITULO DEL FORMULARIO ------------------------>
                     <label class="titulo-login">Acceder</label>
 
                     <!----------------- CAMPOS DEL FORMULARIO ------------------------>
-                    <label for="usuario">Usuario o email</label>
-                    <input type="text" id="usuario" required>
+                    <label for="identifier">Usuario o email</label>
+                    <input type="text" id="identifier" name="identifier" value="<%= locals.oldData ? oldData.identifier : null %>">
+                    <% if (locals.errors && errors.identifier) { %>
+                        <div class="error">* <%= errors.identifier.msg %></div>
+                    <% } %>
 
-                    <label for="contrasenia">Contraseña</label>
-                    <input type="password" id="contrasenia" required>
+                    <label for="password">Contraseña</label>
+                    <input type="password" id="password" name="password">
+                    <% if (locals.errors && errors.password) { %>
+                        <div class="error">* <%= errors.password.msg %></div>
+                    <% } %>
 
                     <!----------------- LINKS DEL FORMULARIO ------------------------>
                     <p><a href="">¿Olvidaste tu contraseña?</a> | <a href="/user/register">Crear cuenta</a></p>
