--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -11,23 +11,35 @@
         <!----------------- FORMULARIO DE REGISTRO ------------------------>
         <section class="fondo-register">
             <article class="contenedor-register">
-                <form action="" method="post">
+                <form action="/user/register" method="post">
 
                     <!----------------- TITULO DEL FORMULARIO ------------------------>
                     <label class="titulo-register">Registrarse</label>
 
                     <!----------------- CAMPOS DEL FORMULARIO ------------------------>
-                    <label for="usuario">Usuario</label>
-                    <input type="text" id="usuario" required>
-
+                    <label for="user">Usuario</label>
+                    <input type="text" id="user" name="user" value="<%= locals.oldData ? oldData.user : null %>">
+                    <% if (locals.errors && errors.user) { %>
+                        <div class="error">* <%= errors.user.msg %></div>
+                    <% } %>
+                    
                     <label for="email">Email</label>
-                    <input type="email" id="email" required>
+                    <input type="text" id="email" name="email" value="<%= locals.oldData ? oldData.email : null %>">
+                    <% if (locals.errors && errors.email) { %>
+                        <div class="error">* <%= errors.email.msg %></div>
+                    <% } %>
 
-                    <label for="contrasenia">Contraseña</label>
-                    <input type="password" id="contrasenia" required>
+                    <label for="password">Contraseña</label>
+                    <input type="password" id="password" name="password" value="<%= locals.oldData ? oldData.password : null %>">
+                    <% if (locals.errors && errors.password) { %>
+                        <div class="error">* <%= errors.password.msg %></div>
+                    <% } %>
 
-                    <label for="confirmar-contrasenia">Confirmar contraseña</label>
-                    <input type="password" id="confirmar-contrasenia" required>
+                    <label for="repassword">Confirmar contraseña</label>
+                    <input type="password" id="repassword" name="repassword" value="<%= locals.oldData ? oldData.repassword : null %>">
+                    <% if (locals.errors && errors.repassword) { %>
+                        <div class="error">* <%= errors.repassword.msg %></div>
+                    <% } %>
 
                     <!----------------- VOLVER A LA PAGINA DE LOGIN ------------------------>
                     <a href="/user/login">¿Ya tienes cuenta? Ingresa</a>
